
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int DWORD ;


 int GetVersion () ;
 scalar_t__ HIBYTE (int ) ;
 scalar_t__ LOBYTE (int ) ;
 int LOWORD (int) ;

int GetWindowsVersion()
{
    int v = 0;
    DWORD version = 0, minVersion = 0, majVersion = 0;

    version = GetVersion();

    minVersion = (DWORD)(HIBYTE(LOWORD(version)));
    majVersion = (DWORD)(LOBYTE(LOWORD(version)));

    if (minVersion == 1 && majVersion == 5) v = 1;
    if (minVersion == 1 && majVersion == 6) v = 2;

    return v;
}
